--- a/view/index.html
+++ b/view/index.html
@@ -5,11 +5,15 @@
     <meta charset="utf-8" />
     <title>TypeScript HTML App</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
+    <script src="three.js"></script>
     <script src="app.js"></script>
 </head>
 <body>
     <h1>TypeScript HTML App</h1>
 
-    <div id="content"></div>
+    <div id="content"
+         style="height:800px; width: 800px;"></div>
+
+
 </body>
 </html>
